--- a/LGPL/CommonSoftware/ACSLaser/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: Makefile,v 1.31 2011/05/13 12:56:48 mpasquat Exp $"
+# "@(#) $Id: Makefile,v 1.32 2012/01/21 22:48:11 tstaig Exp $"
 #
 #
 
@@ -9,11 +9,11 @@
 # Macro definitions.                          #
 ###############################################
 define makeIt
-   ( ((/usr/bin/time -f "$1 COMPILATION TIME %E" make $(MAKE_FLAGS) -C $1 $2 2>&1) && ( echo "### ==> SUCCEDED" | tee -a  $4 >/dev/null )) || ( echo "### ==> FAILED $2 ! " | tee -a $3 $4 1>&2 )) | tee -a $3 $4 >/dev/null;
+   ( ( (/usr/bin/time -f "$1 COMPILATION TIME %E" make $(MAKE_FLAGS) -C $1 $2 2>&1) && ( echo "### ==> SUCCEDED" | tee -a  $4 >/dev/null ) ) || ( echo "### ==> FAILED $2 ! " | tee -a $3 $4 1>&2 ) ) | tee -a $3 $4 >/dev/null;
 endef
 
 define makeItAux
-   (( make $(MAKE_FLAGS) -C $1 $2 2>&1 ) || ( echo "### ==> FAILED $2 ! " | tee -a $3 $4 1>&2 )) | tee -a $3 $4 >/dev/null;
+   ( ( make $(MAKE_FLAGS) -C $1 $2 2>&1 ) || ( echo "### ==> FAILED $2 ! " | tee -a $3 $4 1>&2 ) ) | tee -a $3 $4 >/dev/null;
 endef
 ###############################################
 
@@ -47,6 +47,9 @@ MODULES_ACSLASER = alarmCommon \
       alarmTests
 
 ifeq ($(os) $(VXWORKS_RTOS),Linux NO)
+    MAKE_FLAGS = "NOCCS=1"
+endif
+ifeq ($(os),$(CYGWIN_VER))
     MAKE_FLAGS = "NOCCS=1"
 endif
 
