--- a/LGPL/CommonSoftware/acsGUIs/jlog/test/Makefile
+++ b/LGPL/CommonSoftware/acsGUIs/jlog/test/Makefile
@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
 # MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.42 2011/11/11 16:47:23 acaproni Exp $" 
+# "@(#) $Id: Makefile,v 1.43 2012/01/21 22:48:11 tstaig Exp $" 
 #
 # Makefile of lcTest for jlog.
 #
@@ -48,29 +48,7 @@ USER_IDL =
 JARFILES = lcTest
 lcTest_DIRS = com alma
 
-USER_LIB =      -lACE \
-                -lTAO \
-                -lTAO_DsLogAdmin \
-                -lTAO_CosNaming \
-                -lTAO_IORTable \
-                -lTAO_PortableServer \
-                -lTAO_Svc_Utils \
-                -lTAO_CosTrading \
-                -lTAO_CosNotification \
-                -lTAO_DynamicAny \
-                -lTAO_IFR_Client \
-                -lTAO_CosProperty \
-                -lacsutil \
-                -lcdb \
-                -llogging \
-                -lacscomponent \
-                -lbaci \
-                -lmaci \
-                -lmaciClient \
-                -lacserr \
-                -lm \
-                -lloki \
-                -lACSErrTypeCommon
+USER_LIB =
 
 EXECUTABLES = 
 
