--- a/LGPL/CommonSoftware/acsthread/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsthread/ws/test/Makefile
@@ -16,7 +16,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.15 2008/10/14 21:28:07 bjeram Exp $"
+# "@(#) $Id: Makefile,v 1.16 2012/01/21 22:48:11 tstaig Exp $"
 #
 # Makefile of ........
 #
@@ -39,7 +39,7 @@
 #
 # additional include and library search paths
 #USER_INC = 
-USER_LIB = -lACE 
+USER_LIB = 
 
 #
 # MODULE CODE DESCRIPTION:
@@ -63,6 +63,7 @@ EXECUTABLES_L   = testACSThread testACSThreadWithParameter testSelfDelThread \
 #
 # <brief description of xxxxx program>
 testPosixThreads_OBJECTS = testPosixThreads
+testPosixThreads_LIBS = pthread
 
 testACSThreadWithParameter_OBJECTS = testACSThreadWithParameter
 testACSThreadWithParameter_LIBS = acsThread
