ACS Cygwin backport for some test modules.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@168503 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/demo/src/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/demo/src/Makefile
@@ -82,7 +82,7 @@ LIBRARIES_L     =
 #
 # <brief description of lllll library>
 alsysMountImpl_OBJECTS  = alsysMountImpl
-alsysMountImpl_LIBS		= demoComponentsStubs acsAlSysSource acsErrTypeAlarmSourceFactory 
+alsysMountImpl_LIBS		= demoComponentsStubs acsAlSysSource acsErrTypeAlarmSourceFactory acscomponent archiveevents
 #
 # Scripts (public and local)
 # ----------------------------
@@ -135,6 +135,8 @@ CDB_SCHEMAS =
 IDL_FILES = demoComponents
 IDL_TAO_FLAGS =
 USER_IDL =
+demoComponentsStubs_LIBS = acscomponentStubs
+
 #
 # Jarfiles and their directories
 #
