--- a/LGPL/CommonSoftware/containerTests/contLogTest/src/Makefile
+++ b/LGPL/CommonSoftware/containerTests/contLogTest/src/Makefile
@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
 # MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.8 2012/01/21 22:48:11 tstaig Exp $"
+# "@(#) $Id: Makefile,v 1.9 2012/01/25 12:46:34 tstaig Exp $"
 #
 # Makefile of ........
 #
@@ -96,7 +96,7 @@ LIBRARIES =	contLogTestImpl
 LIBRARIES_L     =
 
 contLogTestImpl_OBJECTS = contLogTestImpl
-contLogTestImpl_LIBS    = contLogTest_IFStubs ACSErrTypeCommon acscomponent
+contLogTestImpl_LIBS    = contLogTest_IFStubs ACSErrTypeCommon acscomponent archiveevents
 #                  
 # Scripts (public and local)
 # ----------------------------
