*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@168995 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcont/.classpath
+++ b/LGPL/CommonSoftware/jcont/.classpath
@@ -45,8 +45,8 @@
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCORBA.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeOK.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmClients.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ACS_jacsutil2"/>
 	<classpathentry kind="var" path="ACSROOT/lib/AcsContainerLogLTS.jar"/>
 	<classpathentry kind="lib" path="lib/jconttest_if.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jacsutil2.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
